--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="main-page">
-  <h1>Welcome to MyFlix!</h1>
+  <h1>Welcome to myFlix!</h1>
   <button
     mat-raised-button
     (click)="openUserRegistration()"
@@ -7,5 +7,13 @@
     color="primary"
   >
     Sign up
+  </button>
+  <button
+    mat-raised-button
+    (click)="openUserLogin()"
+    style="margin-right: 10px"
+    color="primary"
+  >
+    Login
   </button>
 </div>
